--- a/source/less/blocks/program-banner.less
+++ b/source/less/blocks/program-banner.less
@@ -1,8 +1,7 @@
 .program-banner {
+  .container();
   display: flex;
   flex-direction: column;
-  width: 320px;
-  margin: 0 auto;
   background-image: url("../img/index-background-mobile@1x.jpg"), linear-gradient(#63a73a 305px, #ffffff 180px);
   background-repeat: no-repeat;
   background-position: top;
@@ -13,25 +12,20 @@
   font-family: @font-family-base;
   font-size: 36px;
   line-height: 36px;
+  font-weight: 400;
   color: @color-white;
 }
 
 .program-banner__slogan {
-  margin-top: -5px;
   line-height: 14px;
   font-family: @font-family-base;
   color: @color-white;
   text-transform: uppercase;
 }
 
-.program-banner__product {
-  margin: 25px 0 0 20px;
-}
-
 .program-banner__button {
   order: 2;
   padding: 11px 72px;
-  margin: 4px 20px 0 20px;
   font-size: 14px;
   line-height: 18px;
   font-weight: 200;
@@ -40,14 +34,11 @@
 
 @media (min-width: @tablet-width) {
   .program-banner {
-    width: 708px;
-    padding: 0 30px 0 30px;
     background-image: none;
     text-align: left;
   }
 
   .program-banner__heading {
-    margin-left: 90px;
     font-size: 60px;
     line-height: 60px;
     color: @color-black;
@@ -68,15 +59,7 @@
     order: 0;
     align-self: flex-start;
     padding: 17px 29px 15px 26px;
-    margin: 0;
     font-size: 20px;
     line-height: 20px;
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .program-banner {
-    width: 1220px;
-    padding: 0 40px 0 40px;
   }
 }
