Промо-баннер готовая стилизация

--- a/source/less/blocks/banner-wrap.less
+++ b/source/less/blocks/banner-wrap.less
@@ -4,9 +4,9 @@
     position: relative;
     box-sizing: border-box;
     width: @desktop-width;
+    min-height: 696px;
     margin-left: auto;
     margin-right: auto;
-    outline: 2px solid red;
 
     &::before {
       content: "";
