--- a/source/less/blocks/categories.less
+++ b/source/less/blocks/categories.less
@@ -1,6 +1,7 @@
 .categories {
   .container();
   padding: 2px 20px 0 20px;
+  margin-top: 21px;
 }
 
 .categories__list {
@@ -8,12 +9,18 @@
 }
 
 .categories__item {
+  padding-bottom: 19px;
   background-color: @color-light-grey;
+}
+
+.categories__item:not(:last-child) {
+  margin-bottom: 20px;
 }
 
 .categories__heading {
   position: relative;
-  padding: 30px 0 0 91px;
+  margin: 0;
+  padding: 30px 0 15px 91px;
   font-family: @font-family-base;
   font-size: 24px;
   line-height: 37px;
@@ -73,7 +80,9 @@
 }
 
 .categories__text {
-  padding: 10px 20px 0 20px;
+  padding: 15px 0 21px 0;
+  margin: 0 20px 20px 20px;
+  border-bottom: 1px solid #d9d9d9;
 }
 
 .categories__text br {
@@ -82,9 +91,9 @@
 
 .categories__button {
   position: relative;
-  display: block;
-  padding: 20px 150px 20px 0;
-  margin: 21px 20px 0 20px;
+  display: inline-block;
+  margin: 0 0 0 20px;
+  padding-right: 40px;
   font-family: @font-family-base;
   font-size: 16px;
   line-height: 16px;
@@ -92,14 +101,13 @@
   text-transform: uppercase;
   text-decoration: none;
   background-color: @color-light-grey;
-  border-top: 1px solid #d9d9d9;
 }
 
 .categories__button::after {
   content: "";
   position: absolute;
-  top: 23px;
-  left: 96px;
+  top: 3px;
+  right: 4px;
   width: 24px;
   height: 11px;
   background-image: url("../img/icon-right-arrow-long.svg");
