--- a/source/less/blocks/how-it-works.less
+++ b/source/less/blocks/how-it-works.less
@@ -1,13 +1,14 @@
 .how-it-works {
   .container();
   padding: 0 20px;
-  margin-bottom: 40px;
+  margin-bottom: 44px;
+  border-bottom: 1px solid #e6e6e6;
 }
 
 .how-it-works__heading {
   .title();
-  margin: 20px 0 23px 0;
-  padding: 0;
+  margin: 0;
+  padding: 15px 0 23px 0;
 }
 
 .how-it-works__list {
@@ -60,12 +61,12 @@
 
 @media screen and (min-width: @tablet-width) {
   .how-it-works {
-    padding: 0 30px;
+    padding: 0 30px 100px 30px;
   }
 
   .how-it-works__heading {
     font-size: 60px;
-    margin: 45px 0 65px 0;
+    padding: 45px 0 65px 0;
   }
 
   .how-it-works__list {
@@ -76,10 +77,15 @@
 
   .how-it-works__item {
     width: 324px;
-    padding: 119px 0 0 0;
+    padding: 117px 0 0 0;
     margin-bottom: 128px;
     font-size: 16px;
     line-height: 24px;
+  }
+
+  .how-it-works__item:nth-child(3),
+  .how-it-works__item:nth-child(4) {
+    margin-bottom: 0;
   }
 
   .how-it-works__item p {
