--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -17,6 +17,7 @@
   font-family: @font-family-base;
   font-size: 16px;
   line-height: 20px;
+  font-weight: 400;
   color: @color-black;
   text-transform: uppercase;
 }
