--- a/source/less/blocks/how-it-works.less
+++ b/source/less/blocks/how-it-works.less
@@ -1,7 +1,7 @@
 .how-it-works {
   .container();
   padding: 0 20px;
-  margin-bottom: 44px;
+  margin-bottom: 20px;
   border-bottom: 1px solid #e6e6e6;
 }
 
@@ -61,7 +61,7 @@
 
 @media screen and (min-width: @tablet-width) {
   .how-it-works {
-    padding: 0 30px 100px 30px;
+    padding: 0 30px 103px 30px;
   }
 
   .how-it-works__heading {
@@ -121,12 +121,12 @@
 
 @media screen and (min-width: @desktop-width) {
   .how-it-works {
-    padding: 0 40px 0 40px;
+    padding: 40px 40px 0 40px;
     border: none;
   }
 
   .how-it-works__heading {
-    margin: 72px 0 65px 0;
+    padding: 30px 0 67px 0;
   }
 
   .how-it-works__item {
