--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,4 @@
-@import "vendor/normalize.css";
+@import (less) "vendor/normalize.css";
 @import "global/variables";
 @import "global/mixins";
 @import "global/fonts";
