--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,6 +1,6 @@
 .contacts {
   position: relative;
-  background-color: @color-light-grey;
+  background-color: @color-white;
 }
 
 .contacts__cooperation {
@@ -31,16 +31,22 @@
 
 .contacts__map {
   width: 100%;
+  height: 362px;
   margin: 0 auto;
+  background-image: url("../img/map.png");
 }
 
 @media screen and (min-width: @tablet-width) {
   .contacts {
-    margin-top: 75px;
+    background-color: @color-white;
+  }
+
+  .contacts__map {
+    height: 395px;
   }
 
   .contacts__cooperation {
-    width: 708px;
+    width: 632px;
     padding: 45px 68px;
     margin: 0 auto;
   }
@@ -75,5 +81,9 @@
   .contacts__cooperation p {
     margin: 65px 0 65px 0;
     text-align: left;
+  }
+
+  .contacts__map {
+    height: 400px;
   }
 }
