--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -10,6 +10,8 @@
 }
 
 .site-list__item {
+  padding-top: 24px;
+  padding-bottom: 21px;
   text-align: center;
   border-bottom: 1px solid #e6e6e6;
 }
