--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,5 +1,5 @@
 .copyright {
-  padding: 30px 0 41px 0;
+  padding: 28px 0 41px 0;
 }
 
 .copyright__text {
@@ -9,6 +9,7 @@
 
 .copyright__link {
   position: relative;
+  display: block;
   font-size: 16px;
   line-height: 16px;
   color: @color-grey;
@@ -19,7 +20,7 @@
   content: "";
   position: absolute;
   top: -7px;
-  left: 250px;
+  right: 0;
   width: 27px;
   height: 34px;
   background-image: url("../img/logo-htmlacademy.svg");
@@ -29,13 +30,21 @@
 
 @media screen and (min-width: @tablet-width) {
   .copyright {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
     width: 33%;
-    margin: 0;
-    padding: 0;
+    margin: auto 0;
+    padding: 20px 0 0 0;
+  }
+
+  .copyright__link {
+    display: block;
+    padding-right: 47px;
   }
 
   .copyright__link::after {
     top: -7px;
-    left: 135px;
+    right: 0;
   }
 }
