--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -4,27 +4,53 @@
   background-color: @color-light-grey;
 }
 
-.page-footer__logo {
+.page-footer__logo-wrap {
+  display: flex;
   margin: auto;
-  padding: 35px 0 30px 0;
+  padding-top: 25px;
+  padding-bottom: 16px;
+}
+
+.page-footer__logo {
+  margin: 0 auto;
 }
 
 @media screen and (min-width: @tablet-width) {
   .page-footer {
     display: flex;
-    align-items: flex-end;
-    padding: 64px 30px 62px 30px;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 30px 62px 30px;
+  }
+
+  .page-footer__logo-wrap {
+    display: flex;
+    justify-content: flex-start;
+    width: 33%;
+    padding-top: 0;
+    padding-bottom: 0;
   }
 
   .page-footer__logo {
     margin: 0;
-    margin-right: 105px;
-    padding: 0;
   }
 }
 
 @media screen and (min-width: @desktop-width) {
   .page-footer {
-    padding: 60px 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 44px 35px 62px 35px;
+  }
+
+  .page-footer__wrap {
+    width: 100%;
+    background-color: @color-light-grey;
+  }
+
+  .page-footer__logo-wrap {
+    margin: 0;
+    padding: 0;
   }
 }
