--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -65,13 +65,13 @@
 @media screen and (min-width: @tablet-width) {
   .additional-products {
     overflow: hidden;
-    padding: 0 30px;
+    padding: 40px 30px 0 0;
   }
 
   .additional-products__title {
     position: relative;
     width: 375px;
-    margin: -72px 0 80px 0;
+    margin: 0 0 80px 0;
     padding-left: 37px;
     font-size: 36px;
     line-height: 36px;
