--- a/source/less/blocks/checkbox.less
+++ b/source/less/blocks/checkbox.less
@@ -1,7 +1,8 @@
 .checkbox {
   position: relative;
   display: inline-block;
-  padding: 5px 0 5px 60px;
+  padding: 5px 0 5px 45px;
+  margin-bottom: 10px;
   line-height: 20px;
 }
 
