--- a/source/less/blocks/program-form-main.less
+++ b/source/less/blocks/program-form-main.less
@@ -10,5 +10,7 @@
 @media screen and (min-width: @tablet-width) {
   .program-form-main__heading-page {
     font-size: 60px;
+    padding-top: 15px;
+    margin-left: 30px;
   }
 }
