--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -25,8 +25,8 @@
 .promo::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 100px;
+  left: 130px;
   width: 55px;
   height: 60px;
   background-image: url("../img/icon-gift.svg");
