--- a/source/less/blocks/picking-program.less
+++ b/source/less/blocks/picking-program.less
@@ -186,8 +186,54 @@
 
   .picking-program__text {
     width: 328px;
+    padding-top: 15px;
+    padding-left: 40px;
     font-size: 20px;
     line-height: 30px;
+  }
+
+  .picking-program__list {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .picking-program__list-name {
+    padding-top: 65px;
+    padding-left: 40px;
+    padding-right: 40px;
+    border-bottom: none;
+  }
+
+  .picking-program__list-categories {
+    margin-left: 40px;
+    margin-right: 40px;
+    border: 1px solid #ededed;
+  }
+
+  .picking-program__list-contacts {
+    padding-top: 45px;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .picking-program__list-additionally {
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .picking-program__item {
+    margin-bottom: 22px;
+  }
+
+  .picking-program__item-additionally {
+    width: 287px;
+    margin-bottom: 20px;
+  }
+
+  .picking-program__item-additionally:nth-child(2n) {
+    margin-left: 50px;
   }
 
   .picking-program__input-text::placeholder,
@@ -205,36 +251,54 @@
 
   .picking-program__legend-contacts {
     width: 594px;
+    padding-left: 40px;
+  }
+
+  .picking-program__legend-contacts::before {
+    bottom: 40px;
+    left: -40px;
+    width: 768px;
   }
 
   .picking-program__legend-comment {
     width: 258px;
+    padding-left: 40px;
+  }
+
+  .picking-program__legend-comment::before {
+    bottom: 40px;
+    left: -40px;
+    width: 768px;
   }
 
   .picking-program__legend-additionally {
     width: 293px;
+    padding-left: 40px;
+  }
+
+  .picking-program__legend-additionally::before {
+    bottom: 40px;
+    left: -40px;
+    width: 768px;
   }
 
   .picking-program__wrapper-button {
     display: flex;
+    align-items: baseline;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 
   .picking-program__button {
-    width: 50%;
+    width: 282px;
+    padding: 15px 0;
+    margin-right: 60px;
     font-size: 20px;
   }
 
   .picking-program__footnote {
     font-size: 16px;
-  }
-
-  .picking-program__list-additionally {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .picking-program__list-additionally .picking-program__item {
-    width: 50%;
+    text-align: left;
   }
 }
 
