--- a/source/less/blocks/input.less
+++ b/source/less/blocks/input.less
@@ -14,3 +14,14 @@
 .input--icon-phone {
   background: url("../img/icon-phone.svg") no-repeat 93% 50%;
 }
+
+@media screen and (min-width: @tablet-width) {
+  .input {
+    position: relative;
+    box-sizing: border-box;
+    width: 100%;
+    flex-shrink: 1;
+    padding: 13px 15px 14px 14px;
+    border: 1px solid #e6e6e6;
+  }
+}
