Каталог на планшете и десктопе

--- a/source/less/blocks/card-product.less
+++ b/source/less/blocks/card-product.less
@@ -68,6 +68,8 @@
   .card-product {
     width: 324px;
     padding: 0;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .card-product:not(:last-of-type) {
