--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -39,7 +39,7 @@
 
 @media screen and (min-width: @tablet-width) {
   .contacts {
-    background-color: @color-white;
+    background-color: @color-light-grey;
   }
 
   .contacts__map {
@@ -47,8 +47,8 @@
   }
 
   .contacts__cooperation {
-    width: 630px;
-    padding: 65px 69px;
+    width: 624px;
+    padding: 65px 72px;
     margin: 0 auto;
   }
 
