--- a/source/less/blocks/input.less
+++ b/source/less/blocks/input.less
@@ -21,7 +21,15 @@
     box-sizing: border-box;
     width: 100%;
     flex-shrink: 1;
-    padding: 13px 15px 14px 14px;
+    padding: 13px 15px 14px 16px;
     border: 1px solid #e6e6e6;
+  }
+
+  .input--icon-mail {
+    background: url("../img/icon-mail.svg") no-repeat 98% 50%;
+  }
+
+  .input--icon-phone {
+    background: url("../img/icon-phone.svg") no-repeat 98% 50%;
   }
 }
