--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -6,6 +6,7 @@
 }
 
 .additional-products__title {
+  padding: 0;
   margin: 27px 0 35px 0;
   font-family: @font-family-base;
   font-size: 24px;
@@ -65,14 +66,14 @@
 @media screen and (min-width: @tablet-width) {
   .additional-products {
     overflow: hidden;
-    padding: 40px 30px 0 0;
+    padding: 40px 30px 0 30px;
   }
 
   .additional-products__title {
     position: relative;
     width: 375px;
-    margin: 0 0 80px 0;
-    padding-left: 37px;
+    margin: 25px 0 80px 0;
+    padding-left: 36px;
     font-size: 36px;
     line-height: 36px;
     background-color: @color-white;
@@ -83,7 +84,7 @@
     z-index: -1;
     position: absolute;
     top: 21px;
-    left: -37px;
+    left: -30px;
     width: 768px;
     height: 3px;
     background-color: @color-green;
@@ -146,16 +147,17 @@
 @media screen and (min-width: @desktop-width) {
   .additional-products {
     width: 895px;
-    margin: 0;
+    margin: 0 0 90px 0;
+    padding: 0;
   }
 
   .additional-products__title {
-    margin: -62px 0 80px -40px;
-    padding-left: 40px;
+    margin: 0 0 80px 0;
+    padding: 0;
   }
 
   .additional-products__title::before {
-    width: 1440px;
+    display: none;
   }
 
   .additional-products__button {
