--- a/source/less/blocks/catalog-main.less
+++ b/source/less/blocks/catalog-main.less
@@ -4,6 +4,7 @@
 
 .catalog-main__heading-page {
   .title();
+  padding: 0;
   margin-left: 20px;
   margin-bottom: 28px;
 }
@@ -13,17 +14,33 @@
     margin: 53px 0 163px 30px;
     font-size: 60px;
   }
+
+  .catalog-main__wrapper-additional-products {
+    width: 768px;
+  }
 }
 
 @media (min-width: @desktop-width) {
   .catalog-main__heading-page {
-    margin: 85px 0 163px 40px;
+    margin: 72px 0 163px 40px;
   }
 
   .catalog-main__wrapper-additional-products {
+    position: relative;
     display: flex;
     justify-content: space-between;
     width: 1220px;
     margin: 0 auto;
+    padding-top: 78px;
+  }
+
+  .catalog-main__wrapper-additional-products::before {
+    content: "";
+    position: absolute;
+    top: 100px;
+    left: -40px;
+    width: 1300px;
+    height: 3px;
+    background-color: @color-green;
   }
 }
