--- a/source/less/blocks/program-form-main.less
+++ b/source/less/blocks/program-form-main.less
@@ -4,13 +4,19 @@
 
 .program-form-main__heading-page {
   .title();
-  margin-left: 20px;
+  padding: 0;
+  margin: 15px 0 24px 20px;
 }
 
 @media screen and (min-width: @tablet-width) {
   .program-form-main__heading-page {
     font-size: 60px;
-    padding-top: 15px;
-    margin-left: 30px;
+    margin: 54px 0 24px 30px;
+  }
+}
+
+@media screen and (min-width: @desktop-width) {
+  .program-form-main__heading-page {
+    margin: 70px 40px 24px 40px;
   }
 }
