--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -12,12 +12,13 @@
 }
 
 .promo__slogan {
-  display: block;
+  display: inline-block;
   width: 200px;
   margin: 0 auto;
   padding-top: 185px;
   font-size: 16px;
   line-height: 20px;
+  font-weight: 400;
   color: @color-white;
   text-align: center;
 }
@@ -36,15 +37,32 @@
 
 @media screen and (min-width: @tablet-width) {
   .promo {
-    padding: 0 30px;
-    min-height: 200px;
+    width: 708px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 78px;
+    padding-left: 0;
+    padding-right: 0;
+    height: 200px;
     margin-top: 65px;
   }
 
   .promo__slogan {
-    margin: 0 85px 0 auto;
+    margin: 0 90px 0 424px;
     padding-top: 72px;
     text-align: left;
+  }
+
+  .promo::before {
+    content: "";
+    position: absolute;
+    top: 68px;
+    left: 90px;
+    width: 55px;
+    height: 60px;
+    background-image: url("../img/icon-gift.svg");
+    background-repeat: no-repeat;
+    background-position: center;
   }
 }
 
@@ -52,11 +70,11 @@
   .promo {
     width: 245px;
     min-height: 290px;
-    margin: 55px 0 0 0;
+    margin: 115px 0 0 0;
   }
 
   .promo__slogan {
-    margin: 0 auto;
+    margin-left: 25px;
     padding-top: 185px;
     text-align: center;
   }
